Code Cleanup and fix some issues with concurrency